--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<!-- Title -->
-		<title>CALSim</title>
+		<title>WireWorld</title>
 
 		<!-- CSS Includes -->
 		<link rel="stylesheet" href="style/main.css" />
