Added bootstrap, jquery, underscore, and basic HTML framework.

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<title>DreamCloak</title>
-		<link rel="stylesheet" href="./style/main.css" />
+
+		<!-- CSS Includes -->
+		<link rel="stylesheet" href="./style/main.css">
+		<link rel="stylesheet" href="./style/bootstrap.css">
 	</head>
 	<body>
 		<h1>Hello World</h1>
+
+		<!-- Script Includes -->
+		<script type="text/javascript" src="./js/jquery.js"></script>
+		<script type="text/javascript" src="./js/underscore.js"></script>
+		<script type="text/javascript" src="./js/bootstrap.js"></script>
+		<script type="text/javascript" src="./js/animate.js"></script>
+		<script type="text/javascript" src="./js/ui.js"></script>
 	</body>
 </html>
