--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -12,13 +12,16 @@
 		<link rel="stylesheet" href="./style/bootstrap.css">
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<!-- Fruit of Life Background -->
+		<canvas id="fruitOfLife"></canvas>
 
 		<!-- Script Includes -->
 		<script type="text/javascript" src="./js/jquery.js"></script>
 		<script type="text/javascript" src="./js/underscore.js"></script>
 		<script type="text/javascript" src="./js/bootstrap.js"></script>
+		<script type="text/javascript" src="./js/p5.js"></script>
 		<script type="text/javascript" src="./js/animate.js"></script>
+		<script type="text/javascript" src="./js/background.js"></script>
 		<script type="text/javascript" src="./js/ui.js"></script>
 	</body>
 </html>
