Remove *all* the styles.

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -9,7 +9,7 @@
 
 		<!-- CSS Includes -->
 		<link rel="stylesheet" href="./style/main.css">
-		<link rel="stylesheet" href="./style/bootstrap.css">
+		<!-- <link rel="stylesheet" href="./style/bootstrap.css"> -->
 	</head>
 	<body>
 		<!-- Fruit of Life Background -->
