--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -16,11 +16,11 @@
 		<canvas id="fruitOfLife"></canvas>
 
 		<!-- Script Includes -->
-		<!--<script type="text/javascript" src="./js/jquery.js"></script>
+		<script type="text/javascript" src="./js/jquery.js"></script>
 		<script type="text/javascript" src="./js/underscore.js"></script>
 		<script type="text/javascript" src="./js/bootstrap.js"></script>
 		<script type="text/javascript" src="./js/p5.js"></script>
-		<script type="text/javascript" src="./js/animate.js"></script>-->
+		<script type="text/javascript" src="./js/animate.js"></script>
 		<script type="text/javascript" src="./js/background.js"></script>
 		<script type="text/javascript" src="./js/ui.js"></script>
 	</body>
