Changed rendered background to static.

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -3,17 +3,22 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 		<title>DreamCloak</title>
 
 		<!-- CSS Includes -->
 		<link rel="stylesheet" href="./style/main.css">
-		<!-- <link rel="stylesheet" href="./style/bootstrap.css"> -->
+		<link rel="stylesheet" href="./style/bootstrap.css">
 	</head>
 	<body>
 		<!-- Fruit of Life Background -->
 		<canvas id="fruitOfLife"></canvas>
+
+		<!-- UI Front -->
+		<div class="container" id="ui-container">
+			Some Text
+		</div>
 
 		<!-- Script Includes -->
 		<script type="text/javascript" src="./js/jquery.js"></script>
@@ -21,7 +26,6 @@
 		<script type="text/javascript" src="./js/bootstrap.js"></script>
 		<script type="text/javascript" src="./js/p5.js"></script>
 		<script type="text/javascript" src="./js/animate.js"></script>
-		<script type="text/javascript" src="./js/background.js"></script>
 		<script type="text/javascript" src="./js/ui.js"></script>
 	</body>
 </html>
