--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -17,7 +17,14 @@
 
 		<!-- UI Front -->
 		<div class="container" id="ui-container">
-			Some Text
+			<div class="row">
+				<div class="col-xs-12">
+					<h3 id="title"><span class="dc-name">DreamCloak</span> Pattern Select</strong></h3>
+					<hr />
+				</div>
+			</div>
+			<div class="row">
+			</div>
 		</div>
 
 		<!-- Script Includes -->
