Added temporary logo.

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -12,8 +12,8 @@
 		<link rel="stylesheet" href="./style/bootstrap.css">
 	</head>
 	<body>
-		<!-- Fruit of Life Background -->
-		<canvas id="fruitOfLife"></canvas>
+		<!-- Logo -->
+		<center><img alt="Dream Cloak" src="./images/Logo.png" class="big-logo"></img></center>
 
 		<!-- UI Front -->
 		<div class="container" id="ui-container">
