Added rounded styling for UI container

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<!-- Logo -->
-		<center><img alt="Dream Cloak" src="./images/Logo.png" class="big-logo"></img></center>
+		<!-- <center><img alt="Dream Cloak" src="./images/Logo.png" class="big-logo"></img></center> -->
 
 		<!-- UI Front -->
 		<div class="container" id="ui-container">
@@ -22,8 +22,6 @@
 					<h3 id="title"><span class="dc-name">DreamCloak</span> Pattern Select</strong></h3>
 					<hr />
 				</div>
-			</div>
-			<div class="row">
 			</div>
 		</div>
 
