Added begin button

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -8,8 +8,11 @@
 		<title>DreamCloak</title>
 
 		<!-- CSS Includes -->
-		<link rel="stylesheet" href="./style/main.css">
+		<link rel="stylesheet" href="./style/jquery-ui.css">
 		<link rel="stylesheet" href="./style/bootstrap.css">
+
+		<!-- User Styles -->
+		<link rel="stylesheet" href="./style/main.css">
 	</head>
 	<body>
 		<!-- Logo -->
@@ -23,6 +26,9 @@
 					<hr />
 				</div>
 			</div>
+			<div class="row select-category">
+				<button class="btn btn-primary bolded" id="start">Begin <br /><span class="glyphicon glyphicon-triangle-bottom"></span></button>
+			</div>
 		</div>
 
 		<!-- Script Includes -->
@@ -30,6 +36,9 @@
 		<script type="text/javascript" src="./js/underscore.js"></script>
 		<script type="text/javascript" src="./js/bootstrap.js"></script>
 		<script type="text/javascript" src="./js/p5.js"></script>
+
+		<!-- User Scripts -->
+		<script type="text/javascript" src="./js/menu.js"></script>
 		<script type="text/javascript" src="./js/animate.js"></script>
 		<script type="text/javascript" src="./js/ui.js"></script>
 	</body>
