--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -27,7 +27,26 @@
 				</div>
 			</div>
 			<div class="row select-category">
-				<button class="btn btn-primary bolded" id="start">Begin <br /><span class="glyphicon glyphicon-triangle-bottom"></span></button>
+				<div class="col-xs-12">
+					<button class="btn btn-primary bolded" id="start">
+						Begin<br />
+						<span class="glyphicon glyphicon-triangle-bottom"></span>
+					</button>
+				</div>
+			</div>
+			<div class="row" id="select-category">
+				<div class="col-xs-6">
+					<button class="btn btn-primary bolded category" id="animated">
+						Constant<br />
+						<span class="glyphicon glyphicon-triangle-bottom"></span>
+					</button>
+				</div>
+				<div class="col-xs-6">
+					<button class="btn btn-primary bolded category" id="constant">
+						Animated<br />
+						<span class="glyphicon glyphicon-triangle-bottom"></span>
+					</button>
+				</div>
 			</div>
 		</div>
 
