Added slider generation and fixed dropdown bug.

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -23,7 +23,7 @@
 		<div class="container" id="ui-container">
 			<div class="row">
 				<div class="col-xs-12">
-					<h3 id="title"><span class="dc-name">DreamCloak</span> Pattern Select</strong></h3>
+					<h2 id="title"><span class="dc-name">DreamCloak</span> Pattern Select</strong></h2>
 					<hr />
 				</div>
 			</div>
@@ -56,16 +56,19 @@
 				</div>
 			</div>
 			<div class="row" id="mode-menu">
-				<div class="col-xs-12">
-					<select class="selectpicker" id="mode">
-					</select>
+				<div class="col-xs-2"></div>
+				<div class="col-xs-8" id="mode-options-container">
+					<h1>Options:</h1>
+					<div id="mode-menu-options">
+					</div>
 				</div>
+				<div class="col-xs-2"></div>
 			</div>
 		</div>
 
 		<!-- Script Includes -->
 		<script type="text/javascript" src="./js/jquery.js"></script>
-		<script type="text/javascript" src="./js/underscore.js"></script>
+		<script type="text/javascript" src="./js/jquery-ui.js"></script>
 		<script type="text/javascript" src="./js/bootstrap.js"></script>
 		<script type="text/javascript" src="./js/bootstrap-select.js"></script>
 		<script type="text/javascript" src="./js/p5.js"></script>
