Added auto-rendering of mode options when first selected and styled sliders.

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -58,7 +58,7 @@
 			<div class="row" id="mode-menu">
 				<div class="col-xs-2"></div>
 				<div class="col-xs-8" id="mode-options-container">
-					<h1>Options:</h1>
+					<h1 class="menu-text">Options:</h1>
 					<div id="mode-menu-options">
 					</div>
 				</div>
