Attempted fix at mobile touch event support.

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -69,6 +69,7 @@
 		<!-- Script Includes -->
 		<script type="text/javascript" src="./js/jquery.js"></script>
 		<script type="text/javascript" src="./js/jquery-ui.js"></script>
+		<script type="text/javascript" src="./js/jquery-ui-touch-punch.js"></script>
 		<script type="text/javascript" src="./js/bootstrap.js"></script>
 		<script type="text/javascript" src="./js/bootstrap-select.js"></script>
 		<script type="text/javascript" src="./js/p5.js"></script>
