Adde dropdown generation and data labels.

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 			<div class="row" id="select-mode">
-				<div class="col-xs-12">
+				<div class="col-xs-12" id="mode-col">
 					<select class="selectpicker" id="mode" data-style="btn-info" data-width="70%">
 					</select>
 				</div>
@@ -64,12 +64,18 @@
 				</div>
 				<div class="col-xs-2"></div>
 			</div>
+			<div class="row" id="apply-row">
+				<div class="col-xs-4"></div>
+				<div class="col-xs-4">
+					<button class="btn btn-danger bolded category" id="apply">Apply</button>
+				</div>
+				<div class="col-xs-4"></div>
+			</div>
 		</div>
 
 		<!-- Script Includes -->
 		<script type="text/javascript" src="./js/jquery.js"></script>
 		<script type="text/javascript" src="./js/jquery-ui.js"></script>
-		<script type="text/javascript" src="./js/jquery-ui-touch-punch.js"></script>
 		<script type="text/javascript" src="./js/bootstrap.js"></script>
 		<script type="text/javascript" src="./js/bootstrap-select.js"></script>
 		<script type="text/javascript" src="./js/p5.js"></script>
