Made UI a bit less rounded.

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -23,8 +23,7 @@
 		<div class="container" id="ui-container">
 			<div class="row">
 				<div class="col-xs-12">
-					<h2 id="title"><span class="dc-name">DreamCloak</span> Pattern Select</strong></h2>
-					<hr />
+					<h2 id="title" class="menu-text"><span class="dc-name">DreamCloak</span> Pattern Select</strong></h2>
 				</div>
 			</div>
 			<div class="row select-category">
@@ -65,11 +64,9 @@
 				<div class="col-xs-2"></div>
 			</div>
 			<div class="row" id="apply-row">
-				<div class="col-xs-4"></div>
-				<div class="col-xs-4">
+				<div class="col-xs-12">
 					<button class="btn btn-danger bolded category" id="apply">Apply</button>
 				</div>
-				<div class="col-xs-4"></div>
 			</div>
 		</div>
 
