Added app icon.

--- a/DreamCloak/index.html
+++ b/DreamCloak/index.html
@@ -7,6 +7,10 @@
 
 		<title>DreamCloak</title>
 
+		<!-- App Icon -->
+		<link rel="icon" link="./images/App_Icon.jpg" sizes="192x192" />
+		<link rel="apple-touch-icon" link="./images/App_Icon.jpg" />
+
 		<!-- CSS Includes -->
 		<link rel="stylesheet" href="./style/jquery-ui.css">
 		<link rel="stylesheet" href="./style/bootstrap.css">
