Added style and submit button.

--- a/Villein/index.html
+++ b/Villein/index.html
@@ -22,12 +22,21 @@
 		<div class="container-fluid" id="baseboard">
 				<div class="row" id="number-entry-row">
 						<div id="number-entry-cell">
-								<input type="text" id="number-entry" placeholder="0000" maxlength="4" size="4"></input>
+								<input type="tel" pattern="[0-9]*" id="number-entry" placeholder="0000" maxlength="4" size="4"></input>
 						</div>
 				</div>
 				<div class="row">
 						<div class="col-md-4"></div>
-						<div class="col-md-4">Button</div>
+						<div class="col-md-4">
+								<button type="button" class="btn btn-primary btn-lg btn-block" id="submit">
+										<div class="glyphicon glyphicon-arrow-down"></div>
+								</button>
+						</div>
+						<div class="col-md-4"></div>
+				</div>
+				<div class="row">
+						<div class="col-md-4"></div>
+						<div class="col-md-4" id="villein"></div>
 						<div class="col-md-4"></div>
 				</div>
 		</div>
@@ -41,6 +50,10 @@
 
 		<!-- Bootstrap -->
 		<script type="text/javascript" src="js/external/bootstrap.min.js"></script>
+
+		<!-- User -->
+		<script type="text/javascript" src="js/ui.js"></script>
+		<script type="text/javascript" src="js/villein.js"></script>
 		<!-- ===== /SCRIPT INCLUDES ===== -->
 	</body>
 </html>
