Added Villein digit class visual.

--- a/Villein/index.html
+++ b/Villein/index.html
@@ -36,7 +36,7 @@
 				</div>
 				<div class="row">
 						<div class="col-md-4"></div>
-						<div class="col-md-4" id="villein"></div>
+						<div class="col-md-4" id="output"></div>
 						<div class="col-md-4"></div>
 				</div>
 		</div>
@@ -54,6 +54,7 @@
 		<!-- User -->
 		<script type="text/javascript" src="js/ui.js"></script>
 		<script type="text/javascript" src="js/villein.js"></script>
+		<script type="text/javascript" src="js/util.js"></script>
 		<!-- ===== /SCRIPT INCLUDES ===== -->
 	</body>
 </html>
