--- a/Villein/index.html
+++ b/Villein/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<title>Villein Number Translator</title>
 
+		<!-- Stay Mobile Friendly -->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<!-- ===== CSS INCLUDES ===== -->
 		<!-- JQuery -->
 		<link rel="stylesheet" type="text/css" href="style/main.css" />
