--- a/Villein/index.html
+++ b/Villein/index.html
@@ -22,8 +22,17 @@
 		<div class="container-fluid" id="baseboard">
 				<div class="row" id="number-entry-row">
 						<div id="number-entry-cell">
-								<input type="tel" pattern="[0-9]*" id="number-entry" placeholder="0000" maxlength="4" size="4"></input>
+								<input type="text" pattern="[0-9]*" id="number-entry" placeholder="0000" maxlength="4" size="4"></input>
 						</div>
+				</div>
+				<div class="row">
+						<div class="col-md-4"></div>
+						<div class="col-md-4">
+								<button type="button" class="btn btn-danger btn-lg btn-block" id="clear">
+										CLEAR
+								</button>
+						</div>
+						<div class="col-md-4"></div>
 				</div>
 				<div class="row">
 						<div class="col-md-4"></div>
