--- a/Villein/index.html
+++ b/Villein/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<title>Villein Number Translator</title>
 
+		<!-- FAVICON -->
+		<link rel="shortcut icon" href="images/favicon.ico" type='image/x-icon' />
+
 		<!-- Stay Mobile Friendly -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
