Added basic style.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
 	<body>
 		<!-- MAIN CONTAINER-->
 		<div class="container-fluid" id="baseboard">
-			<div class="row">
-				<div class="col-xs-6"></div>
-				<div class="col-xs-6"></div>
+			<div class="row table">
+				<div class="col-xs-6" id="calsim-area">
+					<a href="CALSim/index.html">
+						CALSim
+					</a>
+				</div>
+				<div class="col-xs-6" id="villein-area">
+					<a href="Villein/index.html">
+						Villein Number Translator
+					</a>
+				</div>
 			</div>
 		</div>
 
