Separated code into different objects to make things easier.

--- a/UlamSpinner/index.html
+++ b/UlamSpinner/index.html
@@ -39,7 +39,9 @@
 		<script type="text/javascript" src="js/external/bootstrap.min.js"></script>
 
 		<!-- User -->
-		<script type="text/javascript" src="js/drawSpinners.js"></script>
+		<script type="text/javascript" src="js/drawUtils.js"></script>
+		<script type="text/javascript" src="js/spinner.js"></script>
+		<script type="text/javascript" src="js/ulam.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<!-- ===== /SCRIPT INCLUDES ===== -->
 	</body>
