OH GOD THE COLORS... ITS FULL OF STARS

--- a/UlamSpinner/index.html
+++ b/UlamSpinner/index.html
@@ -23,10 +23,14 @@
 	</head>
 	<body>
 		<!-- MAIN CONTAINER-->
-		<div class="container-fluid" id="baseboard">
-			<canvas width="100%" height="100%" id="drawing-board">
-			</canvas>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-xs-12"></div>
+			</div>
 		</div>
+
+		<!-- CANVAS -->
+		<canvas width="100%" height="100%" id="drawing-board"></canvas>
 
 		<!-- ===== SCRIPT INCLUDES ===== -->
 		<!-- JQuery -->
