Cleaned up code, found cool finishing point.

--- a/UlamSpinner/index.html
+++ b/UlamSpinner/index.html
@@ -43,6 +43,7 @@
 		<script type="text/javascript" src="js/external/bootstrap.min.js"></script>
 
 		<!-- User -->
+		<script type="text/javascript" src="js/functions.js"></script>
 		<script type="text/javascript" src="js/drawUtils.js"></script>
 		<script type="text/javascript" src="js/spinner.js"></script>
 		<script type="text/javascript" src="js/ulam.js"></script>
