Chaged navigation layout.

--- a/index.html
+++ b/index.html
@@ -23,17 +23,22 @@
 	</head>
 	<body>
 		<!-- MAIN CONTAINER-->
-		<div class="container-fluid" id="baseboard">
-			<div class="row table">
-				<div class="col-xs-6" id="calsim-area">
-					<a href="CALSim/index.html">
-						CALSim
-					</a>
+		<div class="container" id="baseboard">
+			<div class="row" id="wheelnav-row">
+				<div class="col-md-8" id="nav-discription">
+					<div class="row">
+						<div class="col-md-4 col-md-offset-2">
+							<h1 id="item-title">CALSim</h1>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2">
+							<span>Lorum ipsum dolor sit amet. Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.</span>
+						</div>
+					</div>
 				</div>
-				<div class="col-xs-6" id="villein-area">
-					<a href="Villein/index.html">
-						Villein Number Translator
-					</a>
+				<div class="col-md-4">
+					<div id="main-nav"></div>
 				</div>
 			</div>
 		</div>
@@ -47,8 +52,13 @@
 
 		<!-- Bootstrap -->
 		<script type="text/javascript" src="js/external/bootstrap.min.js"></script>
+		<!-- WheelNav -->
+		<script type="text/javascript" src="js/external/raphael.min.js"></script>
+		<script type="text/javascript" src="js/external/raphael.icons.min.js"></script>
+		<script type="text/javascript" src="js/external/wheelnav.min.js"></script>
 
 		<!-- User -->
+		<script type="text/javascript" src="js/main.js"></script>
 		<!-- ===== /SCRIPT INCLUDES ===== -->
 	</body>
 </html>
