--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
 			<div class="row" id="wheelnav-row">
 				<div class="col-md-8" id="nav-discription">
 					<div class="row">
-						<div class="col-md-4 col-md-offset-2">
-							<h1 id="item-title">CALSim</h1>
+						<div class="col-md-8 col-md-offset-2">
+							<h1 id="item-title"></h1>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
-							<span>Lorum ipsum dolor sit amet. Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.Lorum ipsum dolor sit amet.</span>
+							<span id="item-description"></span>
+							<br />
+							<br />
+							<a id="item-link" href="CALSim/index.html">View Project</a>
 						</div>
 					</div>
 				</div>
@@ -58,6 +61,7 @@
 		<script type="text/javascript" src="js/external/wheelnav.min.js"></script>
 
 		<!-- User -->
+		<script type="text/javascript" src="js/projects.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<!-- ===== /SCRIPT INCLUDES ===== -->
 	</body>
