Added 8-bit computer and new title.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<!-- FAVICON -->
 		<!-- <link rel="shortcut icon" href="" type='image/x-icon' /> -->
 
+		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Lobster|Open+Sans:700|Shadows+Into+Light" rel="stylesheet">
+
 		<!-- Stay Mobile Friendly -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,6 +27,11 @@
 	<body>
 		<!-- MAIN CONTAINER-->
 		<div class="container" id="baseboard">
+			<div class="row">
+				<div class="col-md-12" id="header">
+					Kyle Hovey
+				</div>
+			</div>
 			<div class="row" id="wheelnav-row">
 				<div class="col-md-8" id="nav-discription">
 					<div class="row">
@@ -36,7 +44,7 @@
 							<span id="item-description"></span>
 							<br />
 							<br />
-							<a id="item-link" href="CALSim/index.html">View Project</a>
+							<a id="item-link" target="_blank" href="CALSim/index.html">View Project</a>
 						</div>
 					</div>
 				</div>
