--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
 					<div id="main-nav"></div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-2 col-md-offset-5" id="social-icons">
+					<ul class="soc">
+						<li><a class="soc-facebook" target="_blank" href="http://facebook.com/192.168.Kyle.Hovey"></a></li>
+						<li><a class="soc-linkedin" target="_blank" href="http://linkedin.com/in/kyle-hovey"></a></li>
+						<li><a class="soc-github soc-icon-last" target="_blank" href="http://github.com/kylehovey"></a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 
 		<!-- ===== SCRIPT INCLUDES ===== -->
