Created overall class structure.

--- a/FirePlace/index.html
+++ b/FirePlace/index.html
@@ -5,7 +5,7 @@
 		<title>Ulam Spinner</title>
 
 		<!-- FAVICON -->
-		<!-- <link rel="shortcut icon" href="images/favicon.ico" type='image/x-icon' /> -->
+		<link rel="shortcut icon" href="../images/favicon/favicon.ico" type='image/x-icon' />
 
 		<!-- Stay Mobile Friendly -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,10 @@
 		<script type="text/javascript" src="js/external/bootstrap.min.js"></script>
 
 		<!-- User -->
+		<script type="text/javascript" src="js/functions.js"></script>
 		<script type="text/javascript" src="js/drawUtils.js"></script>
+		<script type="text/javascript" src="js/FireCell.js"></script>
+		<script type="text/javascript" src="js/FirePlace.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<!-- ===== /SCRIPT INCLUDES ===== -->
 	</body>
