--- a/FirePlace/index.html
+++ b/FirePlace/index.html
@@ -20,6 +20,7 @@
 	</head>
 	<body>
 		<!-- CANVAS -->
+		<!-- <canvas width="100%" height="100%" id="vignette"></canvas> -->
 		<canvas width="100%" height="100%" id="drawing-board"></canvas>
 
 		<!-- ===== SCRIPT INCLUDES ===== -->
@@ -32,6 +33,7 @@
 		<!-- User -->
 		<script type="text/javascript" src="js/functions.js"></script>
 		<script type="text/javascript" src="js/drawUtils.js"></script>
+		<script type="text/javascript" src="js/Vignette.js"></script>
 		<script type="text/javascript" src="js/FireCell.js"></script>
 		<script type="text/javascript" src="js/FirePlace.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
