Changed FirePlace constructor so that it takes in a drawing board. Hopefully this makes it easier to create multiple fires.

--- a/FirePlace/index.html
+++ b/FirePlace/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<!-- Author: Kyle Hovey -->
-		<title>Ulam Spinner</title>
+		<title>Fireplace</title>
 
 		<!-- FAVICON -->
 		<link rel="shortcut icon" href="../images/favicon/favicon.ico" type='image/x-icon' />
