--- a/AcousticForest/index.html
+++ b/AcousticForest/index.html
@@ -26,7 +26,7 @@
 		<audio id="main-track" src="audio/cosmic_love.mp3"></audio>
 
 		<!-- CANVAS -->
-		<!-- <canvas width="100%" height="100%" id="drawing-board"></canvas> -->
+		<canvas width="100%" height="100%" id="drawing-board"></canvas>
 
 		<!-- ===== SCRIPT INCLUDES ===== -->
 		<!-- JQuery -->
@@ -41,6 +41,7 @@
 		<!-- User -->
 		<script type="text/javascript" src="js/functions.js"></script>
 		<script type="text/javascript" src="js/drawUtils.js"></script>
+		<script type="text/javascript" src="js/AudioAnalyser.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<!-- ===== /SCRIPT INCLUDES ===== -->
 	</body>
