--- a/AcousticForest/index.html
+++ b/AcousticForest/index.html
@@ -41,6 +41,8 @@
 		<!-- User -->
 		<script type="text/javascript" src="js/functions.js"></script>
 		<script type="text/javascript" src="js/drawUtils.js"></script>
+		<script type="text/javascript" src="js/FireCell.js"></script>
+		<script type="text/javascript" src="js/FirePlace.js"></script>
 		<script type="text/javascript" src="js/AudioAnalyser.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<!-- ===== /SCRIPT INCLUDES ===== -->
