--- a/AcousticForest/index.html
+++ b/AcousticForest/index.html
@@ -44,6 +44,8 @@
 		<script type="text/javascript" src="js/FireCell.js"></script>
 		<script type="text/javascript" src="js/FirePlace.js"></script>
 		<script type="text/javascript" src="js/AudioAnalyser.js"></script>
+		<script type="text/javascript" src="js/Environment.js"></script>
+		<script type="text/javascript" src="js/Mountain.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<!-- ===== /SCRIPT INCLUDES ===== -->
 	</body>
