--- a/AcousticForest/index.html
+++ b/AcousticForest/index.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<!-- Get Our Audio -->
-		<audio id="main-track" src="audio/something_dark.mp3"></audio>
+		<audio id="main-track" src="audio/heaven_for_the_sinner.mp3"></audio>
 
 		<!-- CANVAS -->
 		<canvas width="100%" height="100%" id="drawing-board"></canvas>
@@ -45,6 +45,7 @@
 		<script type="text/javascript" src="js/AudioAnalyser.js"></script>
 		<script type="text/javascript" src="js/Environment.js"></script>
 		<script type="text/javascript" src="js/Mountain.js"></script>
+		<script type="text/javascript" src="js/Stars.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<!-- ===== /SCRIPT INCLUDES ===== -->
 	</body>
