--- a/AcousticForest/index.html
+++ b/AcousticForest/index.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<!-- Get Our Audio -->
-		<audio id="main-track" src="audio/heaven_for_the_sinner.mp3"></audio>
+		<audio id="main-track" src="audio/full_circle.mp3"></audio>
 
 		<!-- CANVAS -->
 		<canvas width="100%" height="100%" id="drawing-board"></canvas>
@@ -40,12 +40,11 @@
 
 		<!-- User -->
 		<script type="text/javascript" src="js/functions.js"></script>
-		<script type="text/javascript" src="js/FireCell.js"></script>
-		<script type="text/javascript" src="js/FirePlace.js"></script>
 		<script type="text/javascript" src="js/AudioAnalyser.js"></script>
 		<script type="text/javascript" src="js/Environment.js"></script>
 		<script type="text/javascript" src="js/Mountain.js"></script>
 		<script type="text/javascript" src="js/Stars.js"></script>
+		<script type="text/javascript" src="js/CampFire.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<!-- ===== /SCRIPT INCLUDES ===== -->
 	</body>
