Found the perfect song.

--- a/AcousticForest/index.html
+++ b/AcousticForest/index.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<!-- Get Our Audio -->
-		<audio id="main-track" src="audio/full_circle.mp3"></audio>
+		<audio id="main-track" src="audio/exogenesis_symphony_p3.mp3"></audio>
 
 		<!-- CANVAS -->
 		<canvas width="100%" height="100%" id="drawing-board"></canvas>
