--- a/AcousticForest/index.html
+++ b/AcousticForest/index.html
@@ -25,6 +25,13 @@
 		<!-- Get Our Audio -->
 		<audio id="main-track" src="audio/exogenesis_symphony_p3.mp3"></audio>
 
+		<!-- snow -->
+		<div id="snow"></div>
+
+		<!-- trees -->
+		<img src="images/tree1.png" id="tree-1" alt="tree-1" />
+		<img src="images/tree2.png" id="tree-2" alt="tree-2" />
+
 		<!-- CANVAS -->
 		<canvas width="100%" height="100%" id="drawing-board"></canvas>
 
