Added JM quotes.

--- a/AcousticForest/index.html
+++ b/AcousticForest/index.html
@@ -13,6 +13,9 @@
 		<!-- Know Charset -->
 		<meta charset=utf-8>
 
+		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
+
 		<!-- ===== CSS INCLUDES ===== -->
 		<!-- JQuery -->
 		<link rel="stylesheet" type="text/css" href="style/main.css" />
@@ -24,6 +27,12 @@
 	<body>
 		<!-- Get Our Audio -->
 		<audio id="main-track" src="audio/exogenesis_symphony_p3.mp3"></audio>
+		
+		<!-- beginning overlay -->
+		<div id="overlay-begin">I only went out for a walk and finally concluded to stay out till sundown, for going out, I found, was really going in.<br />-John Muir</div>
+
+		<!-- beginning overlay -->
+		<div id="overlay-end">When one is alone at night in the depths of these woods, the stillness is at once awful and sublime. Every leaf seems to speak.<br />-John Muir</div>
 
 		<!-- snow -->
 		<div id="snow"></div>
