Added some more cross-browser support.

--- a/AcousticForest/index.html
+++ b/AcousticForest/index.html
@@ -54,6 +54,9 @@
 		<!-- Bootstrap -->
 		<script type="text/javascript" src="js/external/bootstrap.min.js"></script>
 
+		<! -- Sweet Alert -->
+		<script type="text/javascript" src="js/external/sweetalert.min.js"></script>
+
 		<!-- User -->
 		<script type="text/javascript" src="js/functions.js"></script>
 		<script type="text/javascript" src="js/AudioAnalyser.js"></script>
