Tried to add my New Years resolutions to my navwheel, but CSS does not play well with it.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- ===== CSS INCLUDES ===== -->
-		<!-- JQuery -->
-		<link rel="stylesheet" type="text/css" href="style/main.css" />
-
 		<!-- Bootstrap -->
 		<link rel="stylesheet" type="text/css" href="style/external/bootstrap.min.css" />
+
+		<!-- Main -->
+		<link rel="stylesheet" type="text/css" href="style/main.css" />
 		<!-- ===== /CSS INCLUDES ===== -->
 	</head>
 	<body>
