Added songs to New Years resolutions.

--- a/Resolutions/index.html
+++ b/Resolutions/index.html
@@ -41,9 +41,9 @@
 								Progress
 							</span>
 							<div class="progress progress-striped">
-								<div class="progress-bar" style="width:17%">
-									<span class="sr-only">17% Complete</span>
-									17%
+								<div class="progress-bar" style="width:11%">
+									<span class="sr-only">11% Complete</span>
+									11%
 								</div>
 							</div>
 						</center>
@@ -60,6 +60,12 @@
 							<li class="resolution">Meditate for a full hour</li>
 							<li class="resolution">Learn Dust Bowl III on guitar</li>
 							<li class="resolution">Finish Gödel Escher Bach</li>
+							<li class="resolution">Write and Record 3 Songs</li>
+							<ul>
+								<li class="resolution">Song 1</li>
+								<li class="resolution">Song 2</li>
+								<li class="resolution">Song 3</li>
+							</ul>
 							<li class="resolution">Accumulate $1000 in savings</li>
 							<li class="resolution done">Make more achievable New Years resolutions</li>
 						</ul>
