--- a/Resolutions/index.html
+++ b/Resolutions/index.html
@@ -41,9 +41,9 @@
 								Progress
 							</span>
 							<div class="progress progress-striped">
-								<div class="progress-bar" style="width:11%">
-									<span class="sr-only">11% Complete</span>
-									11%
+								<div class="progress-bar" style="width:10%">
+									<span class="sr-only">10% Complete</span>
+									10%
 								</div>
 							</div>
 						</center>
@@ -56,6 +56,7 @@
 				<div class="row">
 					<div class="col-xs-10 col-xs-offset-1 card-container" id="resolutions-col">
 						<ul id="resolutions-list">
+							<li class="resolution">Go skiing 15 days</li>
 							<li class="resolution">Run the mile in under 7 minutes</li>
 							<li class="resolution">Meditate for a full hour</li>
 							<li class="resolution">Learn Dust Bowl III on guitar</li>
