--- a/Resolutions/index.html
+++ b/Resolutions/index.html
@@ -42,8 +42,8 @@
 							</span>
 							<div class="progress progress-striped">
 								<div class="progress-bar" style="width:10%">
-									<span class="sr-only">10% Complete</span>
-									10%
+									<span class="sr-only">20% Complete</span>
+									20%
 								</div>
 							</div>
 						</center>
@@ -56,7 +56,7 @@
 				<div class="row">
 					<div class="col-xs-10 col-xs-offset-1 card-container" id="resolutions-col">
 						<ul id="resolutions-list">
-							<li class="resolution">Go skiing 15 days (13/15)</li>
+							<li class="resolution done">Go skiing 15 days</li>
 							<li class="resolution">Run the mile in under 7 minutes</li>
 							<li class="resolution">Meditate for a full hour</li>
 							<li class="resolution">Learn Dust Bowl III on guitar</li>
