--- a/index.html
+++ b/index.html
@@ -1,92 +1,99 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<!-- Author: Kyle Hovey -->
-		<title>Homepage of Kyle Hovey</title>
+  <head>
+    <!-- Author: Kyle Hovey -->
+    <title>Homepage of Kyle Hovey</title>
 
-		<!-- Favicons -->
-		<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-		<link rel="manifest" href="/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-		<meta name="theme-color" content="#ffffff">
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
-		<!-- Fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Lobster|Open+Sans:700|Shadows+Into+Light" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Lobster|Open+Sans:700|Shadows+Into+Light" rel="stylesheet">
 
-		<!-- Stay Mobile Friendly -->
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Stay Mobile Friendly -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- ===== CSS INCLUDES ===== -->
-		<!-- Bootstrap -->
-		<link rel="stylesheet" type="text/css" href="style/external/bootstrap.min.css" />
+    <!-- ===== CSS INCLUDES ===== -->
+    <!-- Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="style/external/bootstrap.min.css" />
 
-		<!-- Main -->
-		<link rel="stylesheet" type="text/css" href="style/main.css" />
-		<!-- ===== /CSS INCLUDES ===== -->
-	</head>
-	<body>
-		<!-- MAIN CONTAINER-->
-		<div class="container" id="baseboard">
-			<div class="row">
-				<div class="col-md-12" id="header">
-					Kyle Hovey
-				</div>
-			</div>
-			<div class="row" id="wheelnav-row">
-				<div class="col-md-8" id="nav-discription">
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2">
-							<h1 id="item-title"></h1>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2">
-							<span id="item-description"></span>
-							<br />
-							<br />
-							<a id="item-link" target="_blank" href="CALSim/index.html">View Project</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div id="main-nav"></div>
-				</div>
-			</div>
-			<ul class="soc">
-				<li><a class="soc-facebook" target="_blank" href="http://facebook.com/192.168.Kyle.Hovey"></a></li>
-				<li><a class="soc-linkedin" target="_blank" href="http://linkedin.com/in/kyle-hovey"></a></li>
-				<li><a class="soc-github soc-icon-last" target="_blank" href="http://github.com/kylehovey"></a></li>
-			</ul>
-		</div>
+    <!-- Main -->
+    <link rel="stylesheet" type="text/css" href="style/main.css" />
+    <!-- ===== /CSS INCLUDES ===== -->
+  </head>
+  <body>
+    <!-- MAIN CONTAINER-->
+    <div class="container" id="baseboard">
+      <div class="row">
+        <div class="col-md-12" id="header">
+          Kyle Hovey
+        </div>
+      </div>
+      <div class="row" id="wheelnav-row">
+        <div class="col-md-8" id="nav-discription">
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+              <h1 id="item-title"></h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+              <span id="item-description"></span>
+              <br />
+              <br />
+              <a id="item-link" target="_blank" href="CALSim/index.html">View Project</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div id="main-nav"></div>
+        </div>
+      </div>
+      <ul class="soc">
+        <li><a class="soc-facebook" target="_blank" href="http://facebook.com/192.168.Kyle.Hovey"></a></li>
+        <li><a class="soc-linkedin" target="_blank" href="http://linkedin.com/in/kyle-hovey"></a></li>
+        <li><a class="soc-github soc-icon-last" target="_blank" href="http://github.com/kylehovey"></a></li>
+      </ul>
+      <div class="center">
+        <p class="text-center">
+          <a href="https://github.com/kylehovey/resume/raw/master/kyle_hovey_resume.pdf">
+            Download Resume
+          </a>
+        </p>
+      </div>
+    </div>
 
-		<!-- ===== SCRIPT INCLUDES ===== -->
-		<!-- JQuery -->
-		<script type="text/javascript" src="js/external/jquery.min.js"></script>
+    <!-- ===== SCRIPT INCLUDES ===== -->
+    <!-- JQuery -->
+    <script type="text/javascript" src="js/external/jquery.min.js"></script>
 
-		<!-- Bootstrap -->
-		<script type="text/javascript" src="js/external/bootstrap.min.js"></script>
+    <!-- Bootstrap -->
+    <script type="text/javascript" src="js/external/bootstrap.min.js"></script>
 
-		<!-- WheelNav -->
-		<script type="text/javascript" src="js/external/raphael.min.js"></script>
-		<script type="text/javascript" src="js/external/raphael.icons.min.js"></script>
-		<script type="text/javascript" src="js/external/wheelnav.min.js"></script>
+    <!-- WheelNav -->
+    <script type="text/javascript" src="js/external/raphael.min.js"></script>
+    <script type="text/javascript" src="js/external/raphael.icons.min.js"></script>
+    <script type="text/javascript" src="js/external/wheelnav.min.js"></script>
 
-		<!-- User -->
-		<script type="text/javascript" src="js/projects.js"></script>
-		<script type="text/javascript" src="js/main.js"></script>
-		<!-- ===== /SCRIPT INCLUDES ===== -->
-	</body>
+    <!-- User -->
+    <script type="text/javascript" src="js/projects.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <!-- ===== /SCRIPT INCLUDES ===== -->
+  </body>
 </html>
