--- a/Resolutions/index.html
+++ b/Resolutions/index.html
@@ -42,8 +42,8 @@
 							</span>
 							<div class="progress progress-striped">
 								<div class="progress-bar" style="width:10%">
-									<span class="sr-only">20% Complete</span>
-									20%
+									<span class="sr-only">30% Complete</span>
+									30%
 								</div>
 							</div>
 						</center>
@@ -67,7 +67,7 @@
 								<li class="resolution">Song 2</li>
 								<li class="resolution">Song 3</li>
 							</ul>
-							<li class="resolution">Accumulate $1000 in savings</li>
+							<li class="resolution done">Accumulate $1000 in savings</li>
 							<li class="resolution done">Make more achievable New Years resolutions</li>
 						</ul>
 					</div>
