--- a/Resolutions/index.html
+++ b/Resolutions/index.html
@@ -42,8 +42,8 @@
 							</span>
 							<div class="progress progress-striped">
 								<div class="progress-bar" style="width:30%">
-									<span class="sr-only">30% Complete</span>
-									30%
+									<span class="sr-only">36% Complete</span>
+									36%
 								</div>
 							</div>
 						</center>
@@ -58,7 +58,7 @@
 						<ul id="resolutions-list">
 							<li class="resolution done">Go skiing 15 days</li>
 							<li class="resolution">Run the mile in under 7 minutes</li>
-							<li class="resolution">Meditate for a full hour</li>
+							<li class="resolution done">Meditate for a full hour</li>
 							<li class="resolution">Learn Dust Bowl III on guitar</li>
 							<li class="resolution">Finish Gödel Escher Bach</li>
 							<li class="resolution">Write and Record 3 Songs</li>
