Added resolutions for 2018.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
             Download Resume
           </a>
         </p>
+        <p class="text-center">
+          <a href="Resolutions/index.html">
+            View Resolution Progress
+          </a>
+        </p>
       </div>
     </div>
 
