Added link to Math 5620.

--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
           <a href="https://github.com/kylehovey/resume/raw/master/kyle_hovey_resume.pdf">
             Download Resume
           </a>
-        </p>
-        <p class="text-center">
+          <span class="divider">|</span>
           <a href="Resolutions/index.html">
-            View Resolution Progress
+            Resolutions
+          </a>
+          <span class="divider">|</span>
+          <a href="MATH_5620">
+            Math 5620
           </a>
         </p>
       </div>
